api connected
get Devecies done

get device updated

upload

startup init done

device factory

House added

restructure

bridge implemented

basic implementation done ?

routes finished

house api works

direct:updateDevice fixed